<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context="com.zhong.bmobdemo.MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       >
       <Button
           android:id="@+id/save_btn"
           style="@style/mainactivityBtn"
           android:text="@string/save"/>
       <Button
           android:id="@+id/query_btn"
           style="@style/mainactivityBtn"
           android:text="@string/query"/>

       <Button
           android:id="@+id/bmobquery_btn"
           style="@style/mainactivityBtn"
           android:text="@string/bmobquery"/>

       <Button
           android:id="@+id/update_btn"
           style="@style/mainactivityBtn"
           android:text="@string/update"/>
       <Button
           android:id="@+id/delete_btn"
           style="@style/mainactivityBtn"
           android:text="@string/delete"/>


   </LinearLayout>
</RelativeLayout>
